@startuml Discord Bot Entity Model

!define ENTITY class
!define PK <b><color:red>PK</color></b>
!define FK <b><color:blue>FK</color></b>
!define UK <b><color:green>UK</color></b>

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
    BackgroundColor<<Entity>> LightYellow
    BorderColor<<Entity>> Black
    ArrowColor Black
}

' ===============================================
' Entities
' ===============================================

ENTITY User <<Entity>> {
    PK id : Long
    UK discordId : String
    UK email : String
    --
    username : String {2..32}
    discriminator : String {4 digits}
    avatarUrl : String
    createdAt : LocalDateTime
    isBot : boolean
    --
    <i>Relations:</i>
    messages : Set<Message>
    guilds : Set<Guild>
    roles : Set<Role>
}

ENTITY Guild <<Entity>> {
    PK id : Long
    UK discordId : String
    FK owner_id : Long
    --
    name : String {2..100}
    description : String
    iconUrl : String
    createdAt : LocalDateTime
    memberLimit : Integer {2..800000}
    --
    <i>Relations:</i>
    owner : User
    members : Set<User>
    channels : Set<Channel>
    roles : Set<Role>
}

ENTITY Channel <<Entity>> {
    PK id : Long
    UK discordId : String
    FK guild_id : Long
    --
    name : String {1..100}
    description : String
    type : ChannelType
    position : Integer
    isNsfw : boolean
    createdAt : LocalDateTime
    --
    <i>Relations:</i>
    guild : Guild
    messages : Set<Message>
}

ENTITY Role <<Entity>> {
    PK id : Long
    FK guild_id : Long
    --
    name : String {1..100}
    color : String {#RRGGBB}
    position : Integer
    createdAt : LocalDateTime
    --
    <i>Permissions:</i>
    canManageChannels : boolean
    canManageRoles : boolean
    canManageMessages : boolean
    canKickMembers : boolean
    canBanMembers : boolean
    canSendMessages : boolean
    canReadMessages : boolean
    --
    <i>Relations:</i>
    guild : Guild
    users : Set<User>
}

ENTITY Message <<Entity>> {
    PK id : Long
    UK discordId : String
    FK author_id : Long
    FK channel_id : Long
    --
    content : String {1..2000}
    createdAt : LocalDateTime
    updatedAt : LocalDateTime
    isEdited : boolean
    isDeleted : boolean
    --
    <i>Embed Fields:</i>
    embedTitle : String
    embedDescription : String
    embedColor : String
    attachmentUrl : String
    --
    <i>Relations:</i>
    author : User
    channel : Channel
}

enum ChannelType {
    TEXT
    VOICE
    CATEGORY
    NEWS
    THREAD
}

' ===============================================
' Relationships
' ===============================================

' Guild <-> Owner (User)
Guild "0..*" --> "1" User : owner >
note on link
    Un utilisateur peut être
    propriétaire de plusieurs guildes
end note

' Guild <-> Members (User)
Guild "0..*" -- "0..*" User : members >
note on link
    Table de jointure: guild_members
    ManyToMany bidirectionnelle
end note

' Guild <-> Channel
Guild "1" *-- "0..*" Channel : channels >
note on link
    Composition: un canal
    appartient à une guilde
    (cascade ALL)
end note

' Guild <-> Role
Guild "1" *-- "0..*" Role : roles >
note on link
    Composition: un rôle
    appartient à une guilde
    (cascade ALL)
end note

' User <-> Role
User "0..*" -- "0..*" Role : roles / users >
note on link
    Table de jointure: user_roles
    ManyToMany bidirectionnelle
end note

' User <-> Message
User "1" -- "0..*" Message : author / messages >
note on link
    Un utilisateur peut
    créer plusieurs messages
    (cascade ALL)
end note

' Channel <-> Message
Channel "1" -- "0..*" Message : channel / messages >
note on link
    Un canal contient
    plusieurs messages
    (cascade ALL)
end note

' Channel -> ChannelType
Channel --> ChannelType : type

' ===============================================
' Notes and Constraints
' ===============================================

note top of User
    <b>Contraintes de validation:</b>
    • username: @NotBlank, @Size(2..32)
    • discriminator: @Pattern(\\d{4})
    • email: @Email, unique
    • discordId: unique (sync avec Discord)
    
    <b>Lifecycle callbacks:</b>
    • @PrePersist: initialise createdAt
end note

note top of Guild
    <b>Contraintes de validation:</b>
    • name: @NotBlank, @Size(2..100)
    • owner: @NotNull
    • memberLimit: @Min(2), @Max(800000)
    • discordId: unique
    
    <b>Lifecycle callbacks:</b>
    • @PrePersist: initialise createdAt
end note

note bottom of Channel
    <b>Contraintes de validation:</b>
    • name: @NotBlank, @Size(1..100)
    • type: @NotNull (enum)
    • guild: @NotNull
    • position: @Min(0)
    
    <b>Lifecycle callbacks:</b>
    • @PrePersist: initialise createdAt
end note

note bottom of Role
    <b>Contraintes de validation:</b>
    • name: @NotBlank, @Size(1..100)
    • color: @Pattern(^#[0-9A-Fa-f]{6}$)
    • guild: @NotNull
    • position: @Min(0)
    
    <b>Lifecycle callbacks:</b>
    • @PrePersist: initialise createdAt
    
    <b>Permissions:</b>
    Système de flags pour gérer
    les droits dans la guilde
end note

note right of Message
    <b>Contraintes de validation:</b>
    • content: @NotBlank, @Size(1..2000)
    • author: @NotNull
    • channel: @NotNull
    
    <b>Lifecycle callbacks:</b>
    • @PrePersist: initialise createdAt
    • @PreUpdate: met à jour updatedAt
                  et marque isEdited = true
    
    <b>Suppression logique:</b>
    Le champ isDeleted permet de
    "supprimer" un message sans
    le retirer de la base
end note

' ===============================================
' Legend
' ===============================================

legend right
    <b>Légende des cardinalités:</b>
    • 1 : exactement un
    • 0..* : zéro ou plusieurs
    • 0..1 : optionnel
    
    <b>Types de relations:</b>
    • --> : association simple
    • *-- : composition (cascade)
    • -- : association bidirectionnelle
    
    <b>Conventions de nommage:</b>
    • PK = Primary Key (id auto-généré)
    • FK = Foreign Key
    • UK = Unique Key
end legend

@enduml
